【新增】添加图片

--- a/task/2_2.md
+++ b/task/2_2.md
@@ -2,7 +2,10 @@
 
 ### 描述 
 青岛家教网注册页面是一个N年前非常传统的老式页面，很陈旧，需要大家用自己新学过的HTML&HTML5&CSS&CSS3的知识，一些新的表单元素，重新实现和改良这个页面，达到熟悉表单元素的目的（传统input和H5的混用达到全部熟悉的目的）。
-具体要制作的页面，入口在http://www.qdjj.net/member/register_1.asp（不需要做），先填写一些资料后进入下一个页面（http://www.qdjj.net/member/register_2.asp）就是我们需要制作的。作业量比较大，做完会有很大收获！大家加油！
+具体要制作的页面，如图：
+![image][../images/qingdao.png]
+入口在http://www.qdjj.net/member/register_1.asp(不需要做），先填写一些资料后进入下一个页面（http://www.qdjj.net/member/register_2.asp）就是我们需要制作的。
+作业量比较大，做完会有很大收获！大家加油！
 
 
 ### 技能点
